# hdr-plus

./: ANDROID_INTEGRATION.md  ANDROID_OPTIMIZATION.md  CMakeLists.txt  flake.nix
.github/workflows/: android-so.yml  android_build.yml  main.yml
android_utils/: build_android.sh  build_deps.sh
src/: Burst.cpp  Burst.h  InputSource.cpp  InputSource.h  LibRaw2DngConverter.cpp  LibRaw2DngConverter.h  align.cpp  hdrplus_raw_pipeline_generator.cpp  merge.cpp
src/jni/: native_hdr_plus_jni.cpp
